--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
   }
