--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dateformat": "^5.0.3",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
   }
